[AArch64][Backport] PR18270, fix handling of GOT entry for local symbol

Applied from master

    2015-04-24  Jiong. Wang  <jiong.wang@arm.com>

    bfd/
      PR ld/18270
      * elfnn-aarch64.c (elfNN_aarch64_size_dynamic): Count local symbol for
      GOT_NORMAL for both sgot/srelgot section.
      (elfNN_aarch64_final_link_relocate): Relocate against GOT entry address
      and generate necessary runtime relocation for GOT entry.